# agent

./: .dockerignore  .env.example  .gitignore  00_develop.ipynb  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  styles.css  test_agent.py
agent/: README.md  __init__.py  agent.py  system_prompt.txt
search/: README.md  __init__.py  data_loader.py  search.py
tests/: __init__.py  agent.py  search.py
